feat: notification service working
