# packages/shared/src/schemas/index.ts
@@ -1,1 +1,1 @@
-export * from './example'
+export * from './notifications';
